# sitepublisher

./: .gitignore  .python-version  LICENSE  README.md  pyproject.toml  sitepublisher.py
src/sitepublisher/: __init__.py  cache.py  filehash.py  remotedir.py  remotedircontents.py  sitepublisher.py
test/: test_import.py  test_import.sh
