[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sitepublisher"
version = "0.2.0"
authors = [
  { name="Neil Walker", email="neil@wynded.co.uk" },
]
description = "A caching FTP-based website publisher"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nsw42/sitepublisher"
"Bug Tracker" = "https://github.com/nsw42/sitepublisher/issues"
